# STUDIA

./: 4.6.0  POS_SOP.html  POS_SOP.py  Untitled-1.py  matma2.py  test.py  test12.py  time_test.py  zadania2.txt  zajecia1.py
Arduino/: instrukcja1.txt
Arduino/project (1)/: diagram.json  libraries.txt  sketch.ino  wokwi-project.txt
CS50 Certificate/: some_code.py
CS50 Certificate/degrees/: degrees.py  util.py
Coursera/: Machine Learning with Python.ipynb  Simple_linear_regression.py
Coursera/Deep Learning with Keras and Tensorflow/: stock_prices.csv  (+5 more)
Projekt_interfejsy/: index.html
notatnik/: 152774_lab3.ipynb  algorytmy_2_dom.ipynb
pliki_do_zadan/: city.csv  city_weighted.csv  equations_results.txt  prime_numbers.txt  small.csv  small_weighted.csv
py/: 152774_Projekt.py  152774_lab1.py  152774_lab2.py  152774_lab3.py  152774_lab_1.py  152774_lab_3_dom.py  152774_lab_3_lekcja.py  algorytmy_2.py  algorytmy_2_dom  algorytmy_2_dom.py  algorytmy_3.py  algorytmy_3_dom.py  algorytmy_4_dom.py  algorytmy_4_lekcja.py  algorytmy_6.py  algorytmy_dodatkowe.py  baza_studentow.csv  mapa.py  pasek ładowania.py  podstawy2.py  projekt_pp.py  test  test.py  time_test.py  xd.py
py/Programowanie zaawansowane/152774_lab4/calculator/: pyproject.toml  setup.cfg
py/Programowanie zaawansowane/152774_lab4/calculator/advanced_calculator/: __init__.py  validation.py
py/Programowanie zaawansowane/152774_lab4/calculator/advanced_calculator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py/Programowanie zaawansowane/152774_lab4/calculator/tests/: test_calculator.py
(+212 files in other folders)
