[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced_calculator"
version = "0.1.0"
description = "Zaawansowany kalkulator z wykorzystaniem wzorców projektowych"
readme = "README.md"
authors = [
    { name="Mateusz Podporski", email="mateuszpodporski@wsb.pl" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]