[metadata]
name = advanced_calculator
version = 0.1.0
description = Zaawansowany kalkulator z wykorzystaniem wzorców projektowych
long_description = file: README.md
long_description_content_type = text/markdown
author = Mateusz Podporski
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8